# church

./: .gitignore  README.md
.claude/: launch.json
.github/workflows/: ci.yml  studio-native-ci.yml  studio-native-release.yml
church-api/: .env.example  .gitignore  CLAUDE.md  MULTITENANCY.md  boost.json  composer.json  package-lock.json  phpunit.xml
church-api/app/Actions/: ApplyPaystackCharge.php
church-api/app/Broadcasting/: TenantChannel.php  TenantPresenceChannel.php  TenantPrivateChannel.php
church-api/app/Contracts/: DomainRegistrar.php
church-api/app/Enums/: CentralRole.php  ContactMessageStatus.php  DomainStatus.php  DomainType.php  DonationFrequency.php  DonationStatus.php  Feature.php  MembershipStatus.php  MinistryApplicationStatus.php  ProvisioningStatus.php  PushCampaignStatus.php  QueueName.php  SermonMediaType.php  SslStatus.php  SubscriptionStatus.php  TenantStatus.php  VideoSourceType.php
church-api/app/Events/: AudienceUpdated.php  ChatMessageSent.php  LiveSourceChanged.php  LiveStateChanged.php  PrayerRequestReceived.php  ReactionSent.php  ScriptureStreamEvent.php
church-api/app/Jobs/: GenerateLiveThumbnail.php  IncrementVideoView.php  ProvisionTenant.php  SendDonationReceipt.php  SendPushCampaign.php  VerifyCustomDomain.php
church-api/app/Listeners/: AssignTenantToShard.php  StartTenantProvisioning.php  TagObservabilityContext.php
church-api/app/Logging/: TenantProcessor.php
church-api/app/Mail/: ChurchWelcomeMail.php  DonationReceiptMail.php
church-api/app/Models/: Album.php  AlbumPhoto.php  Attendance.php  BibleVerse.php  Branch.php  CentralUser.php  ContactMessage.php  Convert.php  Currency.php  DatabaseServer.php  Domain.php  Donation.php  EvangelismCampaign.php  Event.php  FollowUp.php  FollowUpNote.php  HomeGroup.php  HomeGroupApplication.php  Identity.php  LiveChatMessage.php  Member.php  Membership.php  Ministry.php  MinistryApplication.php  OfferingCollection.php  Order.php  OrderItem.php  PastLive.php  PersonalAccessToken.php  Plan.php  PrayerRequest.php  Product.php  PushCampaign.php  PushReceipt.php  PushSubscription.php  Resource.php  ResourceBooking.php  Sermon.php  SermonScripture.php  Service.php  (+9 more)
church-api/app/Providers/: AppServiceProvider.php  HorizonServiceProvider.php  TenancyServiceProvider.php
church-api/app/Services/: BibleService.php  CurrencyService.php  DomainVerificationService.php  FacebookRelayService.php  PaystackBillingService.php  PrayerNotificationService.php  ShardSelector.php  StudioActivationService.php
church-api/app/Support/: AccessControl.php  AudienceTracker.php  QueryFilters.php
church-api/app/Traits/: HandlesFileUploads.php
church-api/bootstrap/: app.php  providers.php
church-api/config/: auth.php  database.php  domains.php  horizon.php  logging.php  push.php  services.php  tenancy.php
church-api/database/: tenantf2e13624-1672-43ff-9e20-e7cfe99a704e
church-api/database/factories/: AlbumFactory.php  AlbumPhotoFactory.php  AttendanceFactory.php  BibleVerseFactory.php  BranchFactory.php  CentralUserFactory.php  ConvertFactory.php  (+26 more)
church-api/routes/: api.php  channels.php  console.php  tenant.php
church-api/tests/: Pest.php
church-client/: CLAUDE.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts
church-client/app/: globals.css  layout.tsx  page.tsx
church-client/lib/: admin-api.ts  api.ts  asset-url.ts  central.ts  church-reactions.ts  currency.ts  data.ts  donations.ts  echo.ts  live.ts  media-bus.ts  media.ts  paystack.ts  platform-api.ts  public-api.ts  soundcloud.ts  store.ts  studio-animations.tsx  studio-upload.ts  studio.ts  theme.ts  youtube.ts
church-client/tests/: home-groups-filters.spec.ts
churchMobile/: App.tsx  BUILD.md  PUSH_SETUP.md  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json
churchMobile/__tests__/: api.test.ts
churchMobile/android/: settings.gradle
churchMobile/ios/: Podfile
churchMobile/src/: config.ts  theme.ts  types.ts
streaming/: README.md  docker-compose.yml  nginx.conf  on-record-done.sh
streaming/srs/: docker-compose.yml  srs.conf
studio-native/: .gitignore  Cargo.toml  README.md  RELEASE.md
studio-native/crates/mod-audio-mixer/: Cargo.toml
studio-native/crates/mod-audio-mixer/src/: lib.rs
studio-native/crates/mod-camera/: Cargo.toml
studio-native/crates/mod-camera/src/: lib.rs
studio-native/crates/mod-encoder/: Cargo.toml
studio-native/crates/mod-encoder/src/: lib.rs
studio-native/crates/mod-output-broadcast/: Cargo.toml
studio-native/crates/mod-output-broadcast/src/: lib.rs
studio-native/crates/mod-output-record/: Cargo.toml
studio-native/crates/mod-output-record/src/: lib.rs
studio-native/crates/mod-overlays/: Cargo.toml
studio-native/crates/mod-overlays/src/: lib.rs
studio-native/crates/mod-screen-capture/: Cargo.toml
studio-native/crates/mod-screen-capture/src/: lib.rs
studio-native/crates/poc-pipeline/: Cargo.toml
studio-native/crates/poc-pipeline/src/: main.rs
studio-native/crates/studio-core/: Cargo.toml
studio-native/crates/studio-core/src/: easing.rs  lib.rs  model.rs  reaction.rs  store.rs  style.rs
studio-native/crates/studio-media/: Cargo.toml
studio-native/crates/studio-media/src/: lib.rs
studio-native/src-tauri/: Cargo.toml  tauri.conf.json
studio-native/src-tauri/capabilities/: default.json
studio-native/src-tauri/icons/: icon.icns
studio-native/src-tauri/src/: main.rs  media_thread.rs
studio-native/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
studio-native/ui/src/: App.tsx  Root.tsx  index.css  main.tsx  styles.css
studio-native/ui/src/components/: ActivationScreen.tsx  Badge.tsx  ConfirmDialog.tsx  ControlsDock.tsx  DockShell.tsx  InspectorDock.tsx  MixerDock.tsx  ResizableRow.tsx  ScenesDock.tsx  SettingsModal.tsx  Slider.tsx  SourcesDock.tsx  StageMonitor.tsx  StatusBar.tsx  StudioHeader.tsx  TransformBox.tsx  TransitionBar.tsx
studio-native/ui/src/lib/: activation.ts  api.ts  bible.ts  cn.ts  studio-animations.ts  studio-layers.ts  studio-tokens.ts
(+662 files in other folders)
