[package]
name = "studio-native-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CHR-101 — Tauri v2 desktop shell for the native studio. Hosts the React chrome (webview) and exposes the IPC capability contract backed by studio-core."

[[bin]]
name = "studio-native-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# The media plane is a REMOVABLE module. With it off, the shell still runs and
# reports zero encoders (CHR-101 behaviour) — the modular guarantee, at the
# compile level.
default = ["media", "screen"]
media = ["dep:studio-media", "dep:base64"]
# Screen capture is its own removable module; it needs the media plane.
screen = ["media", "dep:mod-screen-capture"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The pure domain layer. The shell depends on it; never the reverse.
studio-core = { path = "../crates/studio-core" }
# The media plane — optional, behind the `media` feature.
studio-media = { path = "../crates/studio-media", optional = true }
# Screen-capture source module — optional, behind the `screen` feature.
mod-screen-capture = { path = "../crates/mod-screen-capture", optional = true }
# Preview frames are shipped to the webview as base64 data-URLs.
base64 = { version = "0.22", optional = true }
