[package]
name = "studio-native-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CHR-101 — Tauri v2 desktop shell for the native studio. Hosts the React chrome (webview) and exposes the IPC capability contract backed by studio-core."

[[bin]]
name = "studio-native-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# The media plane is a REMOVABLE module. With it off, the shell still runs and
# reports zero encoders (CHR-101 behaviour) — the modular guarantee, at the
# compile level.
default = ["media", "screen", "camera", "overlays", "audio", "record", "broadcast"]
media = ["dep:studio-media", "dep:base64", "dep:mod-encoder"]
# Screen capture is its own removable module; it needs the media plane.
screen = ["media", "dep:mod-screen-capture"]
# Camera / capture-card is its own removable module; it needs the media plane.
camera = ["media", "dep:mod-camera"]
# Text / bible / song overlays are their own removable module; needs media.
overlays = ["media", "dep:mod-overlays"]
# Audio mixer is its own removable module; needs the media plane umbrella.
audio = ["media", "dep:mod-audio-mixer"]
# Local recording output is its own removable module; needs media.
record = ["media", "dep:mod-output-record"]
# External broadcast (Facebook RTMPS) output is its own removable module.
broadcast = ["media", "dep:mod-output-broadcast"]

[dependencies]
tauri = { version = "2", features = [] }
# Native file-open dialog (local audio/media picker). Driven from JS via the
# `plugin:dialog|open` IPC command — no extra npm wrapper needed.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The pure domain layer. The shell depends on it; never the reverse.
studio-core = { path = "../crates/studio-core" }
# The media plane — optional, behind the `media` feature.
studio-media = { path = "../crates/studio-media", optional = true }
# Screen-capture source module — optional, behind the `screen` feature.
mod-screen-capture = { path = "../crates/mod-screen-capture", optional = true }
# Camera / capture-card source module — optional, behind the `camera` feature.
mod-camera = { path = "../crates/mod-camera", optional = true }
# Text / bible / song overlay module — optional, behind the `overlays` feature.
mod-overlays = { path = "../crates/mod-overlays", optional = true }
# Audio mixer module — optional, behind the `audio` feature.
mod-audio-mixer = { path = "../crates/mod-audio-mixer", optional = true }
# Local recording output module — optional, behind the `record` feature.
mod-encoder = { path = "../crates/mod-encoder", optional = true }
mod-output-record = { path = "../crates/mod-output-record", optional = true }
# External broadcast output module — optional, behind the `broadcast` feature.
mod-output-broadcast = { path = "../crates/mod-output-broadcast", optional = true }
# Preview frames are shipped to the webview as base64 data-URLs.
base64 = { version = "0.22", optional = true }
