[package]
name = "mod-output-broadcast"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CHR-109 — Facebook Live Output. Program tap → H.264 + AAC → flvmux → rtmp2sink (RTMPS direct, no WHIP/SRS hop). Removable: absent ⇒ no external broadcast, preview + record intact."

[dependencies]
gstreamer = "0.23"
anyhow = "1"
# Encoder selection + hardware/software fallback (CHR-111).
mod-encoder = { path = "../mod-encoder" }

[dev-dependencies]
studio-media = { path = "../studio-media" }
