[package]
name = "mod-overlays"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CHR-106 — text / bible / song overlay Source module. Renders a studio-core Layer's style + content to an image via cairo+pango (no DOM) and feeds it as a compositor layer. Removable: absent ⇒ overlays just don't render."

[dependencies]
gstreamer = "0.23"
gstreamer-app = "0.23"
anyhow = "1"
# The pure domain model this module renders (the CHR-102 payoff: the first module
# that consumes studio-core's full Style + Layer).
studio-core = { path = "../studio-core" }
# cairo + pango render the overlay to an ARGB buffer. Pinned to the 0.20 gtk-rs
# line so they share gstreamer's glib 0.20 (single glib in the tree). We only use
# them to produce raw pixels — no glib/GObject type ever crosses into GStreamer.
cairo-rs = "0.20"
pango = "0.20"
pangocairo = "0.20"

[dev-dependencies]
studio-media = { path = "../studio-media" }
